# BC_Nexus

./: .gitignore  .gitmodules  AGENTS.md  AUTHORS.md  About Project and Contributors .md  BCNexus.ipynb  BCNexus.py  BCNexus_dev.ipynb  BCNexus_dev_model_builder.ipynb  BCNexus_dev_model_test_kamaria.ipynb  BCNexus_wf_modes.ipynb  HowToRun.md  Makefile  ModeList.txt  Prepare_data_files.ipynb  README.md  app.py  app_copy.py  dashboard.sh  data_supply_chain.ipynb  datafile_test_pydantic copy.ipynb  datafile_test_pydantic.ipynb  debug.txt  get_data_CODERS.ipynb  install_bcnexus.sh  main.py  makefile  model_BCNexus.txt  personal_elias  personal_elias.pub  playground_YOSE.ipynb  playground_model_data.ipynb  playground_model_nexus.ipynb  pyproject.toml  requirements.txt  set-up_docker.md  setup.py  solver_diagnostics.ipynb  style.css  test.py
.github/: FUNDING.yml
Base_CNZ_noCCS/: data.txt  dataProcessed.txt
Create the Input Datafiles/: 2023 03 02 BC Nexus_CLEWsy.yaml  How to Create the Datafile.md  ReadMe_CofigurationFileForCLEWsy.md  Readme.md
Data_otoole/: default_values.csv
Graphical Resources/: BC Nexus Workflow.drawio.html
Model_Kotzur/: model_BCNexus_Kotzur.txt  otoole_config_Kotzur.yaml  preprocess_data_Kotzur.py
Model_Niet/: Readme.md  model_BCNexus_Niet.txt  preprocess_data_Niet.py
Prepare_input_files/: 2023 03 02 BC Nexus_CLEWsy.yaml  ReadMe_CofigurationFileForCLEWsy.md
REF_datapackage_template_backup/: ReserveMarginTagFuel.csv  TotalTechnologyAnnualActivityUpperLimit.csv
RES/: BCNexus_RES.graphml
Resources/: AccumulatedNewCapacity.csv  (+20 more)
(+1145 files in other folders)
